--- a/css/base.css
+++ b/css/base.css
@@ -80,13 +80,14 @@ main {
 }
 
 .content {
-	position: relative;
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-/* 	margin: 0 auto; */
-	min-height: 100vh;
+    position: relative;
+    display: grid;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin: 0 auto;
+    min-height: 100vh;
+    justify-items: center;
 }
 
 .content--fixed {
