--- a/css/demo1.css
+++ b/css/demo1.css
@@ -21,8 +21,8 @@
 
 .content__subtitle {
 	font-size: 1.25em;
-	background: #EF9D85;
-	color: #fff;
+	background: #CEFF00;
+	color: #000;
 	padding: 0.45em 0.5em;
 	line-height: 1;
 	margin: 0;
